plugins {
    id 'java'
}

group 'xyz.andornot'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson:3.1.2.Final'
    implementation 'io.quarkus:quarkus-reactive-pg-client:3.2.4.Final'
    implementation 'net.datafaker:datafaker:2.0.1'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache:3.1.2.Final'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}